- map is a relative size  - headings center-aligned on mobile  - less spacing between nav-bar items on mobile  - added a space between <place name> and "to the map"  - fixed comment about "blue zig zag" to "black zig zag"  - fixed space in "your favorite pics"  - added more space below page title (white image overlay)  - removed some points from the map

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -451,16 +451,16 @@ header.hero-header {
     color: white;
     background-color: rgba(0,0,0,0);
     position: relative;
-    top: 85%;
+    top: 80%;
     font-size: 6rem;
     width: 100%;
     height: 100vh;
 }
 
-@media only screen and (max-width:600px) {
+@media only screen and (max-width:767px) {
     header.hero-header {
         font-size: 3rem;
-        top: 90%;
+        top: 88%;
     }
 }
 
@@ -476,4 +476,16 @@ img.hero-img {
 
 div.hero-placeholder {
     height: 80vh;
+}
+
+@media only screen and (max-width:767px) {
+  /* Adjust margins when nav goes vertical */
+  div.main-nav {
+      margin: 1rem 0;
+      line-height: 1;
+  }
+
+  main > h3,h4,h5 {
+      text-align: center;
+  }
 }
